// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`combinator.css format 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
-Option/root .public/section ~ .public/section:before {
}

.x .y {}
.x > .y {}
.x ~ .y {}
.x + .y {}
.x.y {}
.x     .y {}
.x
    .y {}

=====================================output=====================================
-Option/root .public/section ~ .public/section:before {
}

.x .y {
}
.x > .y {
}
.x ~ .y {
}
.x + .y {
}
.x.y {
}
.x .y {
}
.x .y {
}

================================================================================
`;

exports[`leading.css format 1`] = `
====================================options=====================================
parsers: ["css"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a {
  > * {
  }
  &, > * {
  }
  + * {
  }
}

=====================================output=====================================
a {
  > * {
  }
  &,
  > * {
  }
  + * {
  }
}

================================================================================
`;
